--- a/index.html
+++ b/index.html
@@ -1,6 +1,177 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>G K Sreepadha | Cloud Security Architect</title>
+
+<style>
+body {
+    margin: 0;
+    font-family: "Segoe UI", Arial, sans-serif;
+    background-color: #f4f6f8;
+    color: #333;
+}
+
+.container {
+    max-width: 900px;
+    margin: 40px auto;
+    background: #ffffff;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+}
+
+header {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 32px;
+}
+
+header p {
+    margin: 5px 0;
+    color: #666;
+}
+
+.section {
+    margin-bottom: 30px;
+}
+
+.section h2 {
+    border-bottom: 2px solid #007acc;
+    padding-bottom: 5px;
+    color: #007acc;
+}
+
+ul {
+    padding-left: 20px;
+}
+
+.job {
+    margin-bottom: 20px;
+}
+
+.job h3 {
+    margin: 0;
+}
+
+.job span {
+    font-size: 14px;
+    color: #777;
+}
+
+.badge {
+    display: inline-block;
+    background: #e6f2ff;
+    color: #005fa3;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 5px 5px 0 0;
+    font-size: 13px;
+}
+
+footer {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 14px;
+    color: #777;
+}
+
+@media (max-width: 600px) {
+    .container {
+        margin: 10px;
+        padding: 20px;
+    }
+}
+</style>
+</head>
+
 <body>
-<h1>G K SREEPADHA</h1>
+
+<div class="container">
+
+<header>
+    <h1>G K Sreepadha</h1>
+    <p>Cloud Security Architect | Governance, Risk & Compliance</p>
+    <p>Bangalore, India | xxx@gmail.com</p>
+</header>
+
+<section class="section">
+    <h2>Professional Summary</h2>
+    <p>
+        Security professional with 15+ years of experience in Governance, Risk, and Compliance 
+        across Application, Infrastructure, and Cloud environments. Expertise in AWS, Azure, 
+        and Google Cloud security architecture, regulatory compliance, and enterprise risk management.
+    </p>
+</section>
+
+<section class="section">
+    <h2>Core Skills</h2>
+    <div class="badge">Cloud Security (AWS, Azure, GCP)</div>
+    <div class="badge">ISO 27001 & SOC 2</div>
+    <div class="badge">NIST & CIS Benchmark</div>
+    <div class="badge">Enterprise Risk Management</div>
+    <div class="badge">Vendor Risk Management</div>
+    <div class="badge">ServiceNow GRC</div>
+    <div class="badge">IAM & PAM</div>
+    <div class="badge">Vulnerability Management</div>
+</section>
+
+<section class="section">
+    <h2>Professional Experience</h2>
+
+    <div class="job">
+        <h3>Associate Director – Cloud Security Architect</h3>
+        <span>Kyndryl India | Oct 2021 – Present</span>
+        <ul>
+            <li>Designed and reviewed cloud security architectures across AWS, Azure, and GCP.</li>
+            <li>Implemented Cloud Security Posture Management aligned with ISO 27001 & SOC 2.</li>
+            <li>Led risk and compliance initiatives using ServiceNow GRC and LeanIX.</li>
+        </ul>
+    </div>
+
+    <div class="job">
+        <h3>Security Architect</h3>
+        <span>Tech Mahindra | Dec 2017 – Oct 2021</span>
+        <ul>
+            <li>Implemented security architecture aligned with NIST 800-53 and CIS benchmarks.</li>
+            <li>Conducted SOC 2 audits and third-party risk assessments.</li>
+        </ul>
+    </div>
+
+</section>
+
+<section class="section">
+    <h2>Education</h2>
+    <ul>
+        <li>M.Sc. Computer Science</li>
+        <li>MBA</li>
+        <li>B.Com (Computer Applications)</li>
+    </ul>
+</section>
+
+<section class="section">
+    <h2>Certifications</h2>
+    <ul>
+        <li>CISA, CISM, CRISC, CGEIT</li>
+        <li>AWS Solutions Architect (Associate & Professional)</li>
+        <li>AWS Security Specialty</li>
+        <li>Google Professional Cloud Security Engineer</li>
+        <li>ISO 27001 Lead Auditor</li>
+        <li>AZ-500 Azure Security Engineer</li>
+        <li>TOGAF v10</li>
+    </ul>
+</section>
+
+<footer>
+    © 2026 G K Sreepadha | Cloud Security & Enterprise Risk Leader
+</footer>
+
+</div>
+
 </body>
 </html>
