--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>G K Sreepadha | Cloud Security Architect</title>
+<title>G K SREEPADHA | Cloud Security Architect</title>
 
 <style>
 body {
@@ -95,9 +95,9 @@ footer {
 <div class="container">
 
 <header>
-    <h1>G K Sreepadha</h1>
-    <p>Cloud Security Architect | Governance, Risk & Compliance</p>
-    <p>Bangalore, India | xxx@gmail.com</p>
+    <h1>G K SREEPADHA</h1>
+    <p>Associate Director | Cloud Security Architect | Governance, Risk & Compliance</p>
+    <p>Bangalore, India | Ph: +91-9600067229 | itsgkaranam@gmail.com</p>
 </header>
 
 <section class="section">
@@ -112,13 +112,13 @@ footer {
 <section class="section">
     <h2>Core Skills</h2>
     <div class="badge">Cloud Security (AWS, Azure, GCP)</div>
-    <div class="badge">ISO 27001 & SOC 2</div>
+    <div class="badge">PCI DSS, ISO 27001 & SOC 2, SOX Sec 404 IT Application and General Computing Controls (ITGC and ITAC)</div>
     <div class="badge">NIST & CIS Benchmark</div>
     <div class="badge">Enterprise Risk Management</div>
-    <div class="badge">Vendor Risk Management</div>
+    <div class="badge">Third Party Security and Risk Management</div>
+    <div class="badge">Identity Access Management and Privileged Access Management</div>
+    <div class="badge">Application and Infrastructure Security - Vulnerability Management and Penetration Testing</div>
     <div class="badge">ServiceNow GRC</div>
-    <div class="badge">IAM & PAM</div>
-    <div class="badge">Vulnerability Management</div>
 </section>
 
 <section class="section">
@@ -157,13 +157,13 @@ footer {
 <section class="section">
     <h2>Certifications</h2>
     <ul>
-        <li>CISA, CISM, CRISC, CGEIT</li>
-        <li>AWS Solutions Architect (Associate & Professional)</li>
+        <li>CISA, CISM, CRISC, and CCAK</li>
+        <li>ISO 27001 Lead Auditor</li>
+        <li>TOGAF v10</li>
+        <li>AWS Solutions Architect - Professional)</li>
         <li>AWS Security Specialty</li>
         <li>Google Professional Cloud Security Engineer</li>
-        <li>ISO 27001 Lead Auditor</li>
         <li>AZ-500 Azure Security Engineer</li>
-        <li>TOGAF v10</li>
     </ul>
 </section>
 
