--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ footer {
 <div class="container">
 
 <header>
+    <img src="profile.jpg" alt="G K Sreepadha" class="profile-photo">
     <h1>G K SREEPADHA</h1>
     <p>Associate Director | Cloud Security Architect | Governance, Risk & Compliance</p>
     <p>Bangalore, India | Ph: +91-9600067229 | itsgkaranam@gmail.com</p>
