--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@ body {
     color: #333;
 }
 
+    .profile-photo {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 15px;
+}
 .container {
     max-width: 900px;
     margin: 40px auto;
