--- a/index.html
+++ b/index.html
@@ -13,13 +13,34 @@ body {
     color: #333;
 }
 
-    .profile-photo {
+    .header-container {
+    position: relative;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.profile-photo {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 15px;
 }
+
+.contact-box {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #f0f4f8;
+    color: #333;
+    border: 1px solid #ddd;
+    padding: 8px 15px;
+    border-radius: 6px;
+    font-size: 14px;
+    font-weight: 500;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
 .container {
     max-width: 900px;
     margin: 40px auto;
