--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@ footer {
 <div class="container">
 
 <header>
+    <header class="header-container">
+
+    <div class="contact-box">
+        📞 +91-XXXXXXXXXX
+    </div>
     <img src="profile.jpg" alt="G K Sreepadha" class="profile-photo">
     <h1>G K SREEPADHA</h1>
     <p>Associate Director | Cloud Security Architect | Governance, Risk & Compliance</p>
