--- a/index.html
+++ b/index.html
@@ -155,41 +155,56 @@ footer {
 
     <div class="job">
         <h3>Associate Director – Cloud Security Architect</h3>
-        <span>Kyndryl India | Oct 2021 – Present</span>
+        <span>CIO Team - Kyndryl India | Remote | Oct 2021 – Present</span>
         <ul>
-            <li>Designed and reviewed cloud security architectures across AWS, Azure, and GCP.</li>
-            <li>Implemented Cloud Security Posture Management aligned with ISO 27001 & SOC 2.</li>
-            <li>Led risk and compliance initiatives using ServiceNow GRC and LeanIX.</li>
+            <li>Designed and reviewed technical cloud security architectures across AWS, Azure, and GCP, supporting both CIO and non-CIO aligned solutions.</li>
+            <li>Designed and implemented a CSPM framework aligned to CCM/CAIQ, ISO 27001, and SOC 2 control requirements..</li>
+            <li>Led risk and compliance initiatives using ServiceNow GRC.</li>
+            <li>Designed an open-source software governance framework and managed its review and approval</li>
         </ul>
     </div>
 
     <div class="job">
         <h3>Security Architect</h3>
-        <span>Tech Mahindra | Dec 2017 – Oct 2021</span>
+        <span>Enterprise Security and Risk Management (ESRM) Practice - Tech Mahindra Ltd., | Bangalore, India | Dec 2017 – Oct 2021</span>
         <ul>
-            <li>Implemented security architecture aligned with NIST 800-53 and CIS benchmarks.</li>
+            <li>Established a control-aligned security architecture framework based on NIST SP 800-53 and CIS Benchmarks.</li>
             <li>Conducted SOC 2 audits and third-party risk assessments.</li>
+            <li>Developed comprehensive Information Security policies and supporting standards and procedures.</li>
         </ul>
     </div>
 
+    <div class="job">
+        <h3>IT Security - Consulting Manager</h3>
+        <span>Risk, Compliance, Data Privacy and Architecture (RCDA) Practice - Wipro Technologies Ltd., | Bangalore, India | Dec 2017 – Oct 2021</span>
+        <ul>
+            <li>Established a control-aligned security architecture framework based on NIST SP 800-53 and CIS Benchmarks.</li>
+            <li>Conducted SOC 2 audits and third-party risk assessments.</li>
+            <li>Developed comprehensive Information Security policies and supporting standards and procedures.</li>
+        </ul>
+    </div>
 </section>
 
 <section class="section">
     <h2>Education</h2>
     <ul>
-        <li>M.Sc. Computer Science</li>
-        <li>MBA</li>
-        <li>B.Com (Computer Applications)</li>
+        <li>M.Sc. Computer Science from Sri Venkateswara University, Tirupati, Andhra Pradesh, India</li>
+        <li>Masters in Business Administration from Sri Venkateswara University, Tirupati, Andhra Pradesh, India</li>
+        <li>Bachelor of Commerce specialized in Computer Applications from Sri Krishnadevaraya University, Anantapur, Andhra Pradesh, India</li>
     </ul>
 </section>
 
 <section class="section">
     <h2>Certifications</h2>
     <ul>
-        <li>CISA, CISM, CRISC, and CCAK</li>
+        <li>CISA, CISM, and CRISC</li>
+        <li>CCSK and CCAK</li>
         <li>ISO 27001 Lead Auditor</li>
+        <li>Certified Payment Card Industry Security Implementer (CPISI)</li>li>
         <li>TOGAF v10</li>
-        <li>AWS Solutions Architect - Professional)</li>
+        <li>ITIL v3 and COBIT 5 Foundation</li>
+        <li>SAP LeanIX Practioner</li>
+        <li>AWS Solutions Architect - Professional</li>
         <li>AWS Security Specialty</li>
         <li>Google Professional Cloud Security Engineer</li>
         <li>AZ-500 Azure Security Engineer</li>
