--- a/index.html
+++ b/index.html
@@ -141,12 +141,14 @@ footer {
 <section class="section">
     <h2>Core Skills</h2>
     <div class="badge">Cloud Security (AWS, Azure, GCP)</div>
-    <div class="badge">PCI DSS, ISO 27001 & SOC 2, SOX Sec 404 IT Application and General Computing Controls (ITGC and ITAC)</div>
-    <div class="badge">NIST & CIS Benchmark</div>
+    <div class="badge">PCI DSS, ISO 27001, SOC 2, NIST, and CIS Benchmark</div>
+    <div class="badge">IT Application and General Computing Controls (ITGC and ITAC)</div>
+    <div class="badge">Enterprise Risk Management</div>
     <div class="badge">Enterprise Risk Management</div>
     <div class="badge">Third Party Security and Risk Management</div>
     <div class="badge">Identity Access Management and Privileged Access Management</div>
-    <div class="badge">Application and Infrastructure Security - Vulnerability Management and Penetration Testing</div>
+    <div class="badge">Application and Infrastructure Security</div>
+    <div class="badge">Vulnerability Management and Penetration Testing</div>
     <div class="badge">ServiceNow GRC</div>
 </section>
 
@@ -155,10 +157,12 @@ footer {
 
     <div class="job">
         <h3>Associate Director – Cloud Security Architect</h3>
-        <span>CIO Team - Kyndryl India | Remote | Oct 2021 – Present</span>
+        <span>Enterprise CIO / CISO Team - Kyndryl India | Remote | Oct 2021 – Present</span>
         <ul>
-            <li>Designed and reviewed technical cloud security architectures across AWS, Azure, and GCP, supporting both CIO and non-CIO aligned solutions.</li>
-            <li>Designed and implemented a CSPM framework aligned to CCM/CAIQ, ISO 27001, and SOC 2 control requirements..</li>
+            <li>Designed and implemented a Secure by Design framework for cloud-based solutions.</li>
+            <li>Reviewed and approved technical cloud security architectures across AWS, Azure, and GCP, supporting both CIO and non-CIO aligned solutions.</li>
+            <li>Designed and implemented a CSPM framework aligned to CCM/CAIQ, ISO 27001, and SOC 2 control requirements.</li>
+            <li>Managed the review and approval process for enterprise TPRMs and global privacy compliance assessments.</li>
             <li>Led risk and compliance initiatives using ServiceNow GRC.</li>
             <li>Designed an open-source software governance framework and managed its review and approval</li>
         </ul>
@@ -166,7 +170,7 @@ footer {
 
     <div class="job">
         <h3>Security Architect</h3>
-        <span>Enterprise Security and Risk Management (ESRM) Practice - Tech Mahindra Ltd., | Bangalore, India | Dec 2017 – Oct 2021</span>
+        <span>Enterprise Security and Risk Management (ESRM) Practice | Tech Mahindra Ltd., | Bangalore, India | Dec 2017 – Oct 2021</span>
         <ul>
             <li>Established a control-aligned security architecture framework based on NIST SP 800-53 and CIS Benchmarks.</li>
             <li>Conducted SOC 2 audits and third-party risk assessments.</li>
@@ -176,11 +180,21 @@ footer {
 
     <div class="job">
         <h3>IT Security - Consulting Manager</h3>
-        <span>Risk, Compliance, Data Privacy and Architecture (RCDA) Practice - Wipro Technologies Ltd., | Bangalore, India | Dec 2017 – Oct 2021</span>
+        <span>Risk, Compliance, Data Privacy and Architecture (RCDA) Practice | Wipro Technologies Ltd., | Bangalore, India | May 2016 - Dec 2017</span>
         <ul>
-            <li>Established a control-aligned security architecture framework based on NIST SP 800-53 and CIS Benchmarks.</li>
-            <li>Conducted SOC 2 audits and third-party risk assessments.</li>
+            <li>Developed Enterprise Security and Risk Management framework based on GAMP5 of GxP related to Computer System Validation.</li>
+            <li>Conducted IT/OT risk assessments for pharmaceutical manufacturing devices—including PLC, SCADA, and ICS systems—aligned with 21 CFR Part 11 (FDA) and EU GMP Annex 11 compliance requirements.</li>
             <li>Developed comprehensive Information Security policies and supporting standards and procedures.</li>
+        </ul>
+    </div>
+
+    <div class="job">
+        <h3>IT Security - Technical Specialist</h3>
+        <span>Identity Access and Privileged Access Governance Practice | GRMS IT Consulting Services Pvt Ltd | Chennai, India | May 2014 - May 2016</span>
+        <ul>
+            <li>Led Identity and Access Management (IAM) and Privileged Access Management (PAM) governance programs in accordance with TRM regulatory requirements.</li>
+            <li>Deployed and enforced MFA controls across ~5,000 enterprise-critical systems, enhancing access security, strengthening identity governance, and mitigating authentication-related risks.</li>
+            <li>Onboarded 5,000+ enterprise systems for centralized log monitoring, enhancing threat detection, operational visibility, and security incident response capabilities.</li>
         </ul>
     </div>
 </section>
@@ -188,22 +202,21 @@ footer {
 <section class="section">
     <h2>Education</h2>
     <ul>
-        <li>M.Sc. Computer Science from Sri Venkateswara University, Tirupati, Andhra Pradesh, India</li>
-        <li>Masters in Business Administration from Sri Venkateswara University, Tirupati, Andhra Pradesh, India</li>
-        <li>Bachelor of Commerce specialized in Computer Applications from Sri Krishnadevaraya University, Anantapur, Andhra Pradesh, India</li>
+        <li>M.Sc. Computer Science | Sri Venkateswara University, Tirupati, Andhra Pradesh, India</li>
+        <li>Masters in Business Administration | Sri Venkateswara University, Tirupati, Andhra Pradesh, India</li>
+        <li>Bachelor of Commerce specialized in Computer Applications | Sri Krishnadevaraya University, Anantapur, Andhra Pradesh, India</li>
     </ul>
 </section>
 
 <section class="section">
     <h2>Certifications</h2>
     <ul>
-        <li>CISA, CISM, and CRISC</li>
-        <li>CCSK and CCAK</li>
+        <li>CISA | CISM | and CRISC</li>
+        <li>CCSK | CCAK</li>
         <li>ISO 27001 Lead Auditor</li>
-        <li>Certified Payment Card Industry Security Implementer (CPISI)</li>li>
-        <li>TOGAF v10</li>
-        <li>ITIL v3 and COBIT 5 Foundation</li>
-        <li>SAP LeanIX Practioner</li>
+        <li>Certified Payment Card Industry Security Implementer (CPISI)</li>
+        <li>TOGAF v10 | ITIL v3 | COBIT 5 Foundation</li>
+        <li>SAP LeanIX Practitioner</li>
         <li>AWS Solutions Architect - Professional</li>
         <li>AWS Security Specialty</li>
         <li>Google Professional Cloud Security Engineer</li>
