--- a/index.html
+++ b/index.html
@@ -123,9 +123,8 @@ footer {
 <div class="container">
 
 <header>
-    <img src="profile.jpg" alt="G K Sreepadha" class="profile-photo">
     <h1>G K SREEPADHA</h1>
-    <p>Associate Director | Cloud Security Architect | Governance, Risk & Compliance</p>
+    <p>Associate Director | Cloud Security Architect | Cybersecurity, Architecture and Engineering</p>
     <p>Bangalore, India | Ph: +91-9600067229 | itsgkaranam@gmail.com</p>
 </header>
 
@@ -140,12 +139,12 @@ footer {
 
 <section class="section">
     <h2>Core Skills</h2>
-    <div class="badge">Cloud Security (AWS, Azure, GCP)</div>
-    <div class="badge">PCI DSS, ISO 27001, SOC 2, NIST, and CIS Benchmark</div>
-    <div class="badge">IT Application and General Computing Controls (ITGC and ITAC)</div>
-    <div class="badge">Enterprise Risk Management</div>
+    <div class="badge">Cloud Security (AWS, Azure, and GCP)</div>
+    <div class="badge">Governance, Risk, and Compliance</div>
     <div class="badge">Enterprise Risk Management</div>
     <div class="badge">Third Party Security and Risk Management</div>
+    <div class="badge">IT Application and General Computing Controls (ITGC and ITAC)</div>
+    <div class="badge">PCI DSS, ISO 27001, SOC 2, NIST, and CIS Benchmark</div>
     <div class="badge">Identity Access Management and Privileged Access Management</div>
     <div class="badge">Application and Infrastructure Security</div>
     <div class="badge">Vulnerability Management and Penetration Testing</div>
@@ -157,7 +156,7 @@ footer {
 
     <div class="job">
         <h3>Associate Director – Cloud Security Architect</h3>
-        <span>Enterprise CIO / CISO Team - Kyndryl India | Remote | Oct 2021 – Present</span>
+        <span>Enterprise CIO / CISO Team - Cybersecurity, Architecture and Engineering | Kyndryl India | Remote | Oct 2021 – Present</span>
         <ul>
             <li>Designed and implemented a Secure by Design framework for cloud-based solutions.</li>
             <li>Reviewed and approved technical cloud security architectures across AWS, Azure, and GCP, supporting both CIO and non-CIO aligned solutions.</li>
@@ -197,6 +196,17 @@ footer {
             <li>Onboarded 5,000+ enterprise systems for centralized log monitoring, enhancing threat detection, operational visibility, and security incident response capabilities.</li>
         </ul>
     </div>
+
+    <div class="job">
+        <h3>IT Security - Systems Associate</h3>
+        <span>SOX 404 IT Control Internal Audit and IAM Governance | iGATE Global Solutions | Chennai, India | December 2008 - March 2014</span>
+        <ul>
+            <li>Led Identity and Access Management (IAM) governance program in accordance with SOX Sec 404 IT Controls and COBIT Framework.</li>
+            <li>Managed day-to-day SOX compliance activities for IT controls, including resource coordination, testing oversight, documentation, and issue tracking, ensuring timely closure of control gaps.</li>
+            <li>Reviewed and validated design documentations, TOD test plans, TOE results, and SSAE No.16 reports for banking and financial applications, including mission critical solutions, aligned with COBIT control areas.</li>
+        </ul>
+    </div>
+    
 </section>
 
 <section class="section">
